# bviewer-console

./: CMakeLists.txt  readme.md
bytes/: CMakeLists.txt
bytes/c/: byte.cpp  bytes.cpp
bytes/h/: byte.h  bytes.h
console/: CMakeLists.txt
console/c/: console_view.cpp  main.cpp
program/: CMakeLists.txt
program/c/: console_view.cpp  main.cpp
program/h/: console_view.h
